# CppNumericalSolvers

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  makefile
cmake/: FindEigen3.cmake  FindIPOPT.cmake
matlab-bindings/: cppsolver.cpp  example.m  make.m  mexstream.hpp
src/: AsaCgSolver.cpp  AsaCgSolver.hpp  BfgsSolver.cpp  BfgsSolver.hpp  ConjugateGradientSolver.cpp  ConjugateGradientSolver.hpp  CppNumericalSolvers.hpp  GradientDescentSolver.cpp  GradientDescentSolver.hpp  ISolver.cpp  ISolver.hpp  IpoptSolver.hpp  LbfgsSolver.cpp  LbfgsSolver.hpp  LbfgsbSolver.cpp  LbfgsbSolver.hpp  Meta.cpp  Meta.hpp  NewtonDescentSolver.cpp  NewtonDescentSolver.hpp  lbfgs.c  lbfgs.h  main.cpp  stopwatch.hpp  testdual.cpp  unittests.cpp
unsupported/Eigen/: DualNum  MATIo  MATio  tmp.sh
unsupported/Eigen/src/DualNum/: DualNum.h  dual
unsupported/Eigen/src/DualNum/attic/: HyperDual.h
